<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.erzse.tareaactivity1.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/iconos"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:src="@drawable/iconos"/>
    <TextView
        android:id="@+id/crear_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:textStyle="normal"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/cuentas_microsoft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuentas_microsoft"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:textAlignment="center"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="alguien@example.com"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/border"/>
    <EditText
        android:id="@+id/contraseña"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:hint="Crea una contraseña"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="12sp"
        android:background="@drawable/border"/>
    <CheckBox
        android:id="@+id/tcheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tcheck"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/numero_rf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_ref"
        android:textColor="#0470c6"
        android:layout_gravity="center"
        android:layout_marginTop="15dp" />
    <TextView
        android:id="@+id/correo_nuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo_nuevo"
        android:textAlignment="center"
        android:textColor="#0470c6"
        android:layout_gravity="center"
        android:layout_marginTop="15dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/al"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:text="@string/al"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/siguiente"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:text="@string/siguiente"
            android:textSize="12sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/acepta"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/acepta"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/privacidad"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/privacidad"
            android:textColor="#0470c6"
            android:textSize="12sp"
            android:layout_marginLeft="3dp"/>
    </LinearLayout>
</LinearLayout>
    <TextView
        android:id="@+id/y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/y"
        android:textSize="12sp"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="100dp"/>
    <TextView
        android:id="@+id/contrato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrato"
        android:textColor="#0470c6"
        android:textSize="12sp"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="120dp"/>
    <Button
        android:id="@+id/btn_siguiente"
        android:layout_width="290dp"
        android:layout_height="30dp"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="35dp"
        android:background="@color/colorPrimary"
        android:text="Siguiente"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        />
    <TextView
        android:id="@+id/microsoft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/microsoft"
        android:textStyle="bold"
        android:textColor="#2d2c2c"
        android:layout_marginTop="550dp"
        android:layout_marginLeft="145dp"/>
</RelativeLayout>


